PAC can handle URI (and not only URL) Cache of PAC can be disabled