@@ -3,20 +3,18 @@ package com.openwebstart.proxy.pac;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
 class PacFileEvaluatorTest {
 
     @Test
-    public void testSimplePac() throws IOException {
+    public void testSimplePac() throws Exception {
         //given
-        final URL url = new URL("http://anyserver:8080");
-        final PacFileEvaluator evaluator = new PacFileEvaluator(PacFileEvaluatorTest.class.getResource("simple-pac.js"));
+        final URI uri = new URI("http://anyserver:8080");
+        final PacFileEvaluator evaluator = new PacFileEvaluator(PacFileEvaluatorTest.class.getResource("simple-pac.js"), new NoopPacProxyCache());
 
         //when
-        final String proxy = evaluator.getProxies(url);
+        final String proxy = evaluator.getProxies(uri);
 
         //than
         Assertions.assertNotNull(proxy);
@@ -24,13 +22,13 @@ class PacFileEvaluatorTest {
     }
 
     @Test
-    public void testSimplePac2() throws IOException {
+    public void testSimplePac2() throws Exception {
         //given
-        final URL url = new URL("http://myserver:8080");
-        final PacFileEvaluator evaluator = new PacFileEvaluator(PacFileEvaluatorTest.class.getResource("simple-pac.js"));
+        final URI uri = new URI("http://myserver:8080");
+        final PacFileEvaluator evaluator = new PacFileEvaluator(PacFileEvaluatorTest.class.getResource("simple-pac.js"), new NoopPacProxyCache());
 
         //when
-        final String proxy = evaluator.getProxies(url);
+        final String proxy = evaluator.getProxies(uri);
 
         //than
         Assertions.assertNotNull(proxy);
